# breakout

./: .dir-locals.el  README.md  ball.cpp  ball.h  game.cpp  game.h  gameobject.cpp  level.h  main.cpp  meson.build  particle.h  postprocess.h  resource.cpp  resource.h  shader.cpp  shader.h  sprite.h  text.cpp  text.h  texture.h
assets/shaders/: blocks.vs  particle.fs  particle.vs  postprocess.fs  postprocess.vs  simple.vs  sprite.vs  text.fs  uniformcolor.fs  vertexcolor.fs  vertexcolor.vs
shaders/: text.vs
src/: Makefile  alcheck.hpp  audiodevice.cpp  audiodevice.hpp  ball.cpp  ball.h  ball.hpp  batchrenderer.cpp  batchrenderer.hpp  effect.cpp  effect.hpp  entities.hpp  event.hpp  eventqueue.cpp  eventqueue.hpp  font.cpp  font.hpp  game.cpp  game.h  game.hpp  gameobject.cpp  gameobject.h  gameobject.hpp  glcheck.cpp  glcheck.hpp  level.cpp  level.h  level.hpp  levelrenderer.cpp  levelrenderer.hpp  main.cpp  meson.build  particle.cpp  particle.h  particle.hpp  particlerenderer.cpp  particlerenderer.hpp  postprocess.cpp  postprocess.hpp  powerup.h  (+24 more)
